# lucyleague-backend

./: .env.example  .gcloudignore  .gitignore  .gitmodules  Cargo.toml  DB.md  Dockerfile  README.md  _config.yml  dev.Dockerfile  docker-compose.yml  docker_fullbuild.sh  prod.Dockerfile
.github/workflows/: main.yml
backend-src/: apiv1.rs  authorization.rs  checkpermission.rs  config.rs  db.rs  main.rs  models.rs  openid.rs  permission.rs  steamapi.rs
backend-src/apiv1/: admin.rs  apimodels.rs  leagues.rs  login.rs  mod.rs
backend-src/apiv1/admin/: mod.rs
docs/: DB.md  index.md
docs/apiv1/: api.md  index.md
docs/apiv1/admin/: index.md
docs/assets/css/: style.scss
sql/: add_user.sql  fuzzy_search.sql  get_auth_token.sql  get_user_from_authtoken.sql  get_user_from_steamid.sql  get_users.sql  get_users_paged.sql  initdb.sql  register_auth_token.sql  schema.sql  test_data.sql  test_users.sql  testing_schema.sql
sql/migrations/: 0.sql
src/: authorization.rs  config.rs  db.rs  db_setup.rs  errors.rs  main.rs  models.rs  openid.rs  permission.rs  steamapi.rs
src/apiv1/: add_teams.rs  apimodels.rs  leagues.rs  mod.rs  teams.rs  users.rs
src/apiv1/admin/: mod.rs
src/db/: divisions.rs  leagues.rs  mod.rs  team_div_assocs.rs  teams.rs
static/: index.html
