[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
confik = "0.11"
deadpool-postgres = { version = "0.12", features = ["serde"] }
derive_more = "0.99.7"
dotenvy = "0.15"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
urlencoding = "2.1.3"
randomizer = "0.1.2"
chrono = { version = "0.4.38", features = ["serde"] }
