[package]
name = "lucyleague"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lucyleague"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
confik = "0.11"
deadpool-postgres = { version = "0.14", features = ["serde"] }
derive_more = { version = "1", features = [
    "debug",
    "display",
    "error",
    "from",
] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
urlencoding = "2.1"
randomizer = "0.1.2"
chrono = { version = "0.4", features = ["serde", "clock"] }
actix-files = "0.6"
serde_json = "1.0"
steamopenid = "0.3"
inquire = "0.7"
num-derive = "0.4"
num-traits = "0.2"
actix-http = "3.9"
log = "0.4"
simple_logger = "5"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
bitflags = "2.6.0"

[features]
debug = []
nodotenv = []
